<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/destination_view"
    tools:context=".DestinationDetailsFiller"
    tools:background="@color/teal_200">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Large"
            tools:text="India Gate"
            android:gravity="center"
            android:padding="@dimen/default_padding_small"
            android:textAllCaps="true"
            android:id="@+id/destination_text_view"/>
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/image_view"
            tools:src="@drawable/delhi_collection"
            android:id="@+id/destination_image"
            android:contentDescription="Destination Image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding_small">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/location_subitem"
                style="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="Near Rajpath"
                style="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/destination_location"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding_small">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/metro_subitem"
                style="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="Pragati Midan"
                style="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/destination_nearest_metro_station"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding_small">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/entry_subitem"
                style="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="24 Hours"
                android:id="@+id/destination_entry_time"
                style="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/default_padding_small">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/entry_fee_subitem"
                style="@style/TextAppearance.AppCompat.Medium"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                tools:text="NIL"
                style="@style/TextAppearance.AppCompat.Medium"
                android:id="@+id/destination_entry_charge"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Medium"
            tools:text="lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged."
            android:id="@+id/destination_info"
            android:padding="@dimen/default_padding_small"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Medium"
            tools:text="The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from \'de Finibus Bonorum et Malorum\' by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham."
            android:id="@+id/destination_more_info"
            android:padding="@dimen/default_padding_small"/>


    </LinearLayout>

</ScrollView>
